@@ -220,6 +220,10 @@ DEFINE_G_KEYS(view_zoom_out_hotkey)
 DEFINE_G_KEYS(view_zoom_box)
 DEFINE_G_KEYS(view_zoom_box_hotkey)
 DEFINE_G_KEYS(view_pan)
+DEFINE_G_KEYS(view_pan_left)
+DEFINE_G_KEYS(view_pan_right)
+DEFINE_G_KEYS(view_pan_up)
+DEFINE_G_KEYS(view_pan_down)
 DEFINE_G_KEYS(view_pan_hotkey)
 DEFINE_G_KEYS(view_update_cues)
 DEFINE_G_KEYS(page_manager)
